# device_soc_gigadevice

./: BUILD.gn  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  OAT.xml  README.en.md  README.md  README_zh.md
gd32f4xx/: BUILD.gn  Kconfig.liteos_m.defconfig.gd32f4xx  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
gd32f4xx/sdk/: BUILD.gn
gd32f4xx/sdk/CMSIS/: core_cm4.h  core_cmInstr.h
gd32f4xx/sdk/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h  system_gd32f4xx.h
gd32f4xx/sdk/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
gd32f4xx/sdk/Drivers/GD32F4xx_Driver/Include/: fmc_operation.h  gd32f4xx_ctc.h  gd32f4xx_dac.h  gd32f4xx_exmc.h  gd32f4xx_exti.h  gd32f4xx_fmc.h  gd32f4xx_fwdgt.h  gd32f4xx_gpio.h  gd32f4xx_ipa.h  gd32f4xx_misc.h  gd32f4xx_trng.h  gd32f4xx_usart.h  gd32f4xx_wwdgt.h
gd32f4xx/sdk/Drivers/GD32F4xx_Driver/Source/: fmc_operation.c  gd32f4xx_adc.c  gd32f4xx_ctc.c  gd32f4xx_dac.c  gd32f4xx_enet.c  gd32f4xx_exmc.c  gd32f4xx_exti.c  gd32f4xx_fmc.c  gd32f4xx_fwdgt.c  gd32f4xx_gpio.c  gd32f4xx_ipa.c  gd32f4xx_misc.c  gd32f4xx_pmu.c  gd32f4xx_rcu.c  gd32f4xx_spi.c
gd32f4xx/sdk/cmsis/: core_cm4_simd.h  core_cmFunc.h
gd32f4xx/sdk/cmsis/gd/gd32f4xx/include/: gd32f4xx_libopt.h
gd32f4xx/sdk/cmsis/gd/gd32f4xx/source/: system_gd32f4xx.c
gd32f4xx/sdk/drivers/gd32f4xx_driver/include/: gd32f4xx_adc.h  gd32f4xx_dma.h  gd32f4xx_enet.h  gd32f4xx_exmc.h  gd32f4xx_fwdgt.h  gd32f4xx_i2c.h  gd32f4xx_pmu.h  gd32f4xx_rcu.h  gd32f4xx_spi.h  gd32f4xx_syscfg.h  gd32f4xx_timer.h  gd32f4xx_tli.h
gd32f4xx/sdk/drivers/gd32f4xx_driver/source/: gd32f4xx_dma.c  gd32f4xx_fmc.c  gd32f4xx_i2c.c  gd32f4xx_syscfg.c  gd32f4xx_timer.c  gd32f4xx_tli.c  gd32f4xx_usart.c
