# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

config("public") {
  include_dirs = [
    "cmsis",
    "cmsis/gd/gd32f4xx/include",
    "drivers/gd32f4xx_driver/include",
  ]
}

module_name = "gd32f4xx_sdk"

kernel_module(module_name) {
  asmflags = board_asmflags

  sources = [
    "cmsis/gd/gd32f4xx/source/system_gd32f4xx.c",
    "drivers/gd32f4xx_driver/source/fmc_operation.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_adc.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_dac.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_dma.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_enet.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_exmc.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_exti.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_fmc.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_fwdgt.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_gpio.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_i2c.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_ipa.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_misc.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_pmu.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_rcu.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_spi.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_syscfg.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_timer.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_tli.c",
    "drivers/gd32f4xx_driver/source/gd32f4xx_usart.c",
  ]
}
